<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="XMEAS_IO_IDX" Id="{2d343dda-bda4-4698-b1c7-4879b7f318ae}">
    <Declaration><![CDATA[TYPE XMEAS_IO_IDX :
	( 
		A_FLOW			:=1,
		D_FLOW			:=2,
		E_FLOW			:=3,
		P_REACTOR		:=4,
		AC_FLOW			:=4
	);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>