<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <GVL Name="G_ICAL" Id="{935515b6-9958-46e8-93f4-1544d0ed3c39}">
    <Declaration><![CDATA[VAR_GLOBAL
	
	// represents the net DC offset compensation multiplier
	XMEAS_ILOOP_CAL	: ARRAY[1..4] OF LREAL	:= 
				[
					// XMEAS tx-rx path
					-39, // A flow
					-9, // D flow
					8, // E flow
					4  // Reactor pressure
				];		
				
	XMV_ILOOP_CAL	: ARRAY[1..4] OF LREAL	:= 
				[
					// XMV tx-rx path
					-11, 	// D valve
					-11, 	// E valve
					15, 	// A valve
					-1	 	// RCW Valve
				];					
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>